# finwise-python

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  flake.nix  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  flakehub-publish-tagged.yml  release.yml
docs/: index.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/reference/: api-reference.md  error-handling.md  pagination.md
docs/usage/: account-balances.md  accounts.md  category-budgets.md  transaction-categories.md  transactions.md
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
reference/api-reference/: index.html
reference/error-handling/: index.html
reference/pagination/: index.html
search/: search_index.json
src/finwise/: __init__.py  _client.py  _config.py  _http.py  _version.py  exceptions.py
src/finwise/models/: __init__.py  account.py  account_balance.py  category_budget.py  transaction.py  transaction_category.py
src/finwise/resources/: __init__.py  _base.py  account_balances.py  accounts.py  category_budgets.py  transaction_categories.py  transactions.py
src/finwise/types/: __init__.py  pagination.py
tests/: conftest.py  test_accounts.py  test_exceptions.py
usage/account-balances/: index.html
usage/accounts/: index.html
usage/category-budgets/: index.html
usage/transaction-categories/: index.html
usage/transactions/: index.html
