[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finwise-python"
version = "1.1.1"
description = "Python SDK for the FinWise API"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "FinWise", email = "support@finwiseapp.io" }]
keywords = ["finwise", "api", "sdk", "finance", "banking", "budgeting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "httpx>=0.25.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "respx>=0.20.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://finwiseapp.io"
Documentation = "https://finwiseapp.io/docs/api"
Repository = "https://github.com/finwise/finwise-python"

[tool.hatch.build.targets.wheel]
packages = ["src/finwise"]

[tool.ruff]
line-length = 88
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "UP045"]

[tool.ruff.lint.isort]
known-first-party = ["finwise"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/finwise"]
branch = true

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/finwise/_version.py:__version__"]
tag_format = "v{version}"
commit_message = "chore(release): bump version to {version}"
commit_author = "github-actions[bot] <github-actions[bot]@users.noreply.github.com>"
